# storage/api-docs/api-docs.json
@@ -1634,20 +1634,11 @@
                                     "name": {
                                         "type": "string"
                                     },
-                                    "phone_country_id": {
-                                        "type": "integer"
-                                    },
                                     "phone": {
                                         "type": "string"
                                     },
-                                    "country_id": {
-                                        "type": "integer"
-                                    },
-                                    "summary": {
-                                        "type": "string"
-                                    },
-                                    "image": {
-                                        "type": "file"
+                                    "email": {
+                                        "type": "steing"
                                     },
                                     "_method": {
                                         "type": "string",
